[package]
name = "ve"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
pollster = "0.4.0"
rand = "0.10.0"
wgpu = "29.0.0"
winit = "0.30.13"
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18"
noise = "0.9.0"
ahash = "0.8.12"

[profile.release]
debug = true
